Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-34722

Wrong usage of memset()

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P4: Low P4: Low
    • 4.8.6
    • 4.8.5
    • ActiveX Support
    • None
    • Windows 7
    • ebc724986f4acf05c3425a7120ddc43d2eeb2515

      qaxbase.cpp, line 3150:

      char *string_data = new char[stringdata.length()];
      memset(string_data, 0, sizeof(string_data));
      

      Did you mean

      char *string_data = new char[stringdata.length()];
      memset(string_data, 0, stringdata.length());
      

      ?

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kleint Friedemann Kleint
            dmitry64 Dmitry
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes