Active Qt: Remove invalid memset()-call.

It uses the wrong size and is not need since the subseqent
memcpy-call overwrites it.

Task-number: QTBUG-34722
Change-Id: Ic1662454cd76a98eff11f52ad6a847c3402e37c3
Reviewed-by: Miikka Heikkinen <miikka.heikkinen@digia.com>